--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,7 @@
 /__pycache__
 /2024_July_Studies_Data/
 /2024_Oct_Studies_Data/
-/test.py
+test.py
+BLD 2024.ipynb
+BLD_phases.json
+BuncherPhaseScan.ipynb
